Bug 172475 - ExplicitSnapshotsChangeUponNavigation API test often fails
Summary: ExplicitSnapshotsChangeUponNavigation API test often fails
Status: RESOLVED FIXED
Alias: None
Product: WebKit
Classification: Unclassified
Component: New Bugs (show other bugs)
Version: WebKit Nightly Build
Hardware: Unspecified Unspecified
: P2 Normal
Assignee: Tim Horton
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2017-05-22 15:04 PDT by Tim Horton
Modified: 2017-05-22 15:09 PDT (History)
4 users (show)

See Also:


Attachments
Patch (1.78 KB, patch)
2017-05-22 15:04 PDT, Tim Horton
simon.fraser: review+
Details | Formatted Diff | Diff

Note You need to log in before you can comment on or make changes to this bug.
Description Tim Horton 2017-05-22 15:04:44 PDT
ExplicitSnapshotsChangeUponNavigation API test often fails
Comment 1 Tim Horton 2017-05-22 15:04:50 PDT
Created attachment 310929 [details]
Patch
Comment 2 Tim Horton 2017-05-22 15:09:06 PDT
http://trac.webkit.org/changeset/217249/webkit