ExplicitSnapshotsChangeUponNavigation API test often fails https://bugs.webkit.org/show_bug.cgi?id=172475 <rdar://problem/31688322>

Reviewed by Simon Fraser.

* TestWebKitAPI/cocoa/TestWKWebView.mm:
(-[TestWKWebView _setUpTestWindow:]):
Make TestWKWebView's window layer-backed. This is now the default,
and it's also easy to accidentally write a test that depends on it
(for example, ExplicitSnapshotsChangeUponNavigation adds an NSBox,
which becomes layer backed, just like the WKWebView, but with no
common layer-backed ancestor).


Canonical link: https://commits.webkit.org/189374@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@217249 268f45cc-cd09-0410-ab3c-d52691b4dbfc